# lol-go

./: .gitignore  README.md  app.json  package.json
api/: Dockerfile  pyproject.toml
api/api/: db.py  db_mysqlclient.py  main.py
front/: App.js  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json  types.ts
front/ChatListItem/: index.tsx
front/UI/: Card.js
front/components/: Home.js  List.js  Map.js
front/components/ChatListItem/: index.tsx  style.ts
front/components/ChatMessage/: index.tsx  style.ts
front/components/InputBox/: index.tsx  style.ts
front/components/Lottie/: Hero.tsx
front/components/OAuth/: OAuthLogin.tsx
front/components/Util/: FlatList.tsx
front/constants/: Colors.js
front/context/: AuthContext.tsx
front/data/: Chats.ts  chatRooms.ts
front/hooks/: useAuth.js  useColorScheme.js
front/navigation/: AppNav.tsx  AppStack.tsx  AuthStack.tsx  MainTabNavigator.js  index.js
front/public/: User.json
front/screens/: ChatRoomScreen.tsx  ChatScreen.tsx  LoginScreen.tsx  SocialWebView.jsx  SocialWebViewModal.jsx  TabTwoScreen.js
