[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jueon <jueonpk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
mysqlclient = "^2.1.1"
PyMySQL = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
